; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_scan.c_scan_init.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_scan.c_scan_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zfs_scan_fill_weight = common dso_local global i32 0, align 4
@fill_weight = common dso_local global i32 0, align 4
@SPA_DVAS_PER_BP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"sio_cache_%d\00", align 1
@sio_cache = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scan_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [36 x i8], align 16
  %3 = load i32, i32* @zfs_scan_fill_weight, align 4
  store i32 %3, i32* @fill_weight, align 4
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %24, %0
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @SPA_DVAS_PER_BP, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %27

8:                                                ; preds = %4
  %9 = getelementptr inbounds [36 x i8], [36 x i8]* %2, i64 0, i64 0
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = getelementptr inbounds [36 x i8], [36 x i8]* %2, i64 0, i64 0
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, 1
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = add i64 4, %16
  %18 = trunc i64 %17 to i32
  %19 = call i32 @kmem_cache_create(i8* %12, i32 %18, i32 0, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0)
  %20 = load i32*, i32** @sio_cache, align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  store i32 %19, i32* %23, align 4
  br label %24

24:                                               ; preds = %8
  %25 = load i32, i32* %1, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %1, align 4
  br label %4

27:                                               ; preds = %4
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @kmem_cache_create(i8*, i32, i32, i32*, i32*, i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
